<resources>
    <string name="app_name">GO SOPT Android</string>
    <string name="edt_signup_name">이름을 입력하세요</string>
    <string name="btn_signup_register">회원가입</string>
    <string name="tv_signup_name">이름</string>
    <string name="edt_signup_pwd">비밀번호를 입력하세요</string>
    <string name="tv_signup_pwd">비밀번호</string>
    <string name="edt_signup_id">아이디를 입력하세요</string>
    <string name="tv_signup_id">ID</string>
    <string name="tv_signup_title">회원가입</string>
    <string name="edt_signup_specialty">특기를 입력하세요</string>
    <string name="tv_signup_specialty">특기</string>
    <string name="btn_signin_signup">회원가입</string>
    <string name="btn_signin_bottom">로그인</string>
    <string name="edt_signin_pwd">비밀번호를 입력해주세요</string>
    <string name="tv_signin_pwd">PASSWORD</string>
    <string name="edt_signin_id">아이디를 입력해주세요</string>
    <string name="tv_signin_id">ID</string>
    <string name="tv_signin_title">GO SOPT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">홈</string>
    <string name="menu_search">검색</string>
    <string name="menu_gallery">갤러리</string>
    <string name="my_playlist_title">My playlist 🎧🎧</string>
    <string name="btn_mypage_withdraw">회원탈퇴</string>
    <string name="tv_signin_signup">회원가입</string>
    <string name="tv_loading_title">로딩중..</string>
    <string name="signup_failure_toast">회원가입에 실패했습니다 :(</string>
    <string name="signup_id_invalid">아이디 형식이 잘못 되었어요 :(</string>
    <string name="signup_pwd_invalid">비밀번호 형식이 잘못 되었어요 :(</string>
</resources>