<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="org.android.go.sopt.presentation.auth.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="80dp"
        android:paddingHorizontal="30dp"
        tools:context=".presentation.auth.SignInActivity">

        <TextView
            android:id="@+id/tv_signin_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="70dp"
            android:text="@string/tv_signin_title"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_signin_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_signin_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/tv_signin_id"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signin_title" />

        <EditText
            android:id="@+id/edt_signin_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/edt_signin_id"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={vm.id}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signin_id" />

        <TextView
            android:id="@+id/tv_signin_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/tv_signin_pwd"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_signin_id" />

        <EditText
            android:id="@+id/edt_signin_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/edt_signin_pwd"
            android:importantForAutofill="no"
            android:text="@={vm.pwd}"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_signin_bottom"
            app:layout_constraintTop_toBottomOf="@+id/tv_signin_pwd" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signin_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:paddingVertical="10dp"
            android:text="@string/btn_signin_bottom"
            android:background="@drawable/shape_light_green_radius_10"
            android:textSize="16sp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_signin_signup"
            app:layout_constraintTop_toBottomOf="@+id/edt_signin_pwd" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signin_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingVertical="10dp"
            android:text="@string/btn_signin_signup"
            android:background="@drawable/shape_green_radius_10"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


